--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^3.10.1"
+    "fastify": "^3.10.1",
+    "firebase": "^8.2.4",
+    "firebase-admin": "^9.4.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
