--- a/backend/package.json
+++ b/backend/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "watch": "tsc -w",
     "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "fastify": "^3.10.1",
     "firebase": "^8.2.4",
     "firebase-admin": "^9.4.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^14.14.22",
     "typescript": "^4.1.3"
   }
